# file-storage/internal/handlers/get_file.go
@@ -43,11 +43,12 @@ func GetFile(service GetFileService) gin.HandlerFunc {
 		}
 
 		restapi.SendSuccess(c, fileResponse{
-			FileName: file.FileName,
-			FileSize: file.FileSize,
-			MimeType: file.MimeType,
-			FileId:   file.FileId,
-			FileUrl:  file.FileUrl,
+			FileName:  file.FileName,
+			FileSize:  file.FileSize,
+			MimeType:  file.MimeType,
+			FileId:    file.FileId,
+			FileUrl:   file.FileUrl,
+			CreatedAt: file.CreatedAt,
 		})
 	}
 }
